kubernetes-reference-architectures/multi-cluster-strategy/k8s/shared-cluster/team-a/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-a
  labels:
    tenant: team-a
    pod-security.kubernetes.io/enforce: baseline
