kubernetes-reference-architectures/multi-cluster-strategy/k8s/shared-cluster/team-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team-a-demo
  namespace: team-a
spec:
  selector:
    app: team-a-demo
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
